# fwdev_daf

asm_led_blink/: main.s  main_funcional.s  makefile  stm32u5.ld
doc/: context.md  cortexm.md  firmwarestrategies.md  interrupts.md  readme.md
led_blink_c/: main.c  makefile  startup.c  startup.ld
min_uos/: .mxproject  min_uos Debug.launch  min_uos.ioc
min_uos/Core/Inc/: main.h
min_uos/Core/Src/: stm32f4xx_it.c
min_uos/app/: app.c
min_uos/uos/: uos.c  uos_port.h  utl_lst.c
source/app_cor/: main  main.c
source/app_sm/: app  app_sm.h  main.c  makefile
source/hal/: hal.c  hal.h  hal_dac.c  hal_dac.h  hal_serial_port.c  hal_serial_port.h
source/port/common/: main.c
source/port/mac/: port_uart.c
source/port/unix/: port_cpu.c  port_dac.c  port_serial.c
source/utl/: utl_dbg.h
stm32/min_asm_fw/: STM32G431KBTX_FLASH.ld  min_asm.ioc
stm32/min_asm_fw/Core/: main.s
stm32/min_asm_fw/min_asm/: .cproject  .project
stm32/min_c/: .cproject  .mxproject  .project  STM32G431KBTX_FLASH.ld  min_asm.ioc  min_asm.launch
stm32/min_c/Core/: main.c
stm32/uos/: .cproject  .mxproject  .project  uos Debug.launch  uos.ioc
stm32/uos/Core/Inc/: stm32g4xx_hal_conf.h  stm32g4xx_it.h
stm32/uos/Core/Src/: main.c  stm32g4xx_hal_msp.c  stm32g4xx_hal_timebase_tim.c  stm32g4xx_it.c
stm32/uos/app/: app.c
stm32/uos/uos/: uos.c  uos.h  uos_port.c  uos_port.h  utl_lst.c  utl_lst.h
test/hal/cpu/: CMakeLists.txt
test/hal/dac/: CMakeLists.txt  test.c
test/hal/uart/: CMakeLists.txt
uos_st/.metadata/: .log4j2.xml  version.ini
uos_st/min_uos/: .cproject  .project
uos_st/min_uos/uos/: uos.h  uos_port.c  utl_lst.h
(+19 files in other folders)
